[workspace]
members = ["nbp-api", "nbp-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"


[workspace.dependencies]
# internal
nbp-api.path = "nbp-api"

# external
clap = { version = "4.4.8", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
reqwest = { version = "0.11.22", default-features = false, features = [
  "tokio-rustls",
  "brotli",
  "trust-dns",
  "gzip",
  "deflate",
  "cookies",
  "multipart",
  "rustls-tls-webpki-roots",
  "serde_json",
] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "local-time",
  "time",
] }
