[package]
name = "nbp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde", "pure-rust-locales"] }
eyre.workspace = true
futures-util = "0.3.29"
nonempty = { version = "0.8.1", features = ["serde", "serialize"] }
reqwest.workspace = true
rust_decimal = { version = "1.32.0", features = ["serde-float", "serde_json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tracing.workspace = true
